Remove useless div

--- a/index.html
+++ b/index.html
@@ -8,19 +8,16 @@
 <body>
 
 
-<div id="todo-app">
-
+<section id="todo-app">
+    <header>
+        <h1>TODO</h1>
+        <input type="text" id="add-item" placeholder="enter todo item" autofocus>
+    </header>
     <section>
-        <header>
-            <h1>TODO</h1>
-            <input type="text" id="add-item" placeholder="enter todo item" autofocus>
-        </header>
-        <section>
-            <ul id="todo-ul">
-            </ul>
-        </section>
+        <ul id="todo-ul">
+        </ul>
     </section>
-</div>
+</section>
 
 <script type="text/template" id="item-template">
     <div class="view">
