--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="text" id="add-item" placeholder="enter todo item" autofocus>
     </header>
     <section>
-        <ul id="todo-ul">
+        <ul id="todo-list">
         </ul>
     </section>
 </section>
